--- a/autonomy/package.xml
+++ b/autonomy/package.xml
@@ -30,6 +30,8 @@
     <exec_depend>rosidl_default_runtime</exec_depend>
     <member_of_group>rosidl_interface_packages</member_of_group>
 
+    <test_depend>ros_testing</test_depend>
+
     <export>
         <build_type>ament_cmake</build_type>
     </export>
