--- a/autonomy/package.xml
+++ b/autonomy/package.xml
@@ -36,6 +36,9 @@
     <!--======================================-->
     <test_depend>gazebo_ros</test_depend>
     <test_depend>gazebo_msgs</test_depend>
+    <test_depend>astar_planner</test_depend>
+    <test_depend>sim_band_planner</test_depend>
+    <test_depend>pure_pursuit_controller</test_depend>
 
     <!--<test_depend>gazebo_planar_move_plugin</test_depend>-->
     <!--<test_depend>gazebo_no_physics_plugin</test_depend>-->
