--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,8 @@ include:
 industrial_ci_humble_test:
   stage: test
   services:
-    - name: mongodb
-      image: mongo:latest
-      ports:
-        - 27017:27017
+    - name: mongo:latest
+      alias: mongodb
+  variables:
+    MONGODB_HOST: mongodb
+    MONGODB_PORT: 27017
