--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,11 +7,13 @@ include:
 industrial_ci_humble_test:
   stage: test
   image: ${CI_DEPENDENCY_PROXY_DIRECT_GROUP_IMAGE_PREFIX}/docker:20.10.16
+
   services:
   - name: ${CI_DEPENDENCY_PROXY_DIRECT_GROUP_IMAGE_PREFIX}/docker:20.10.16-dind
     alias: docker
   - name: mongo:latest
     alias: mongodb
+
   script:
     - apk add --update git bash coreutils tar
     - git clone --quiet --depth 1 https://github.com/ros-industrial/industrial_ci.git .ci_config
@@ -28,13 +30,13 @@ industrial_ci_humble_test:
         docker login ${CI_REGISTRY} -u ${CI_REGISTRY_USER} -p ${CI_REGISTRY_PASSWORD} ;
       fi
     - .ci_config/gitlab.sh DOCKER_IMAGE=${DOCKER_IMAGE} UNDERLAY=${UNDERLAY}
+
   variables:
     ADDITIONAL_DEBS: curl
     PARALLEL_BUILDS: 2 # keep this for now, since there seems to be memory limit issues in the ci VM
     CMAKE_ARGS: -DCMAKE_CXX_FLAGS=-Wno-ignored-attributes -Wno-int-in-bool-context
     DOCKER_PULL: "false"
-    MONGODB_HOST: mongodb
-    MONGODB_PORT: 27017
+    DOCKER_RUN_OPTS: "--network=host"
   cache:
     key: $CI_PIPELINE_ID
     paths:
